objects/copado__Streaming_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Channel_Name__c</fullName>
        <inlineHelpText>Streaming channel (PushTopic) name</inlineHelpText>
        <label>Channel Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled streaming for the given channel will be tracked for real time changes.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Timeout__c</fullName>
        <inlineHelpText>Streaming service for the given channel will be unsubscribed when timeout(milliseconds) has reached. Blank mean infinite.</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>